a few changes made

--- a/header.html
+++ b/header.html
@@ -9,12 +9,9 @@
     <title>Website header</title>
 </head>
 <body>
-    <header>
-        <figure>
-            <img id="logo" title="Website Logo" alt="Website Logo" src="./images/Logo.png">
-        </figure>
-
-        <ul id="navmenu">
+    <header class="logo-div">
+        <a class="logo-link" href="#home"><img class="logo-pic" title="Website Logo" alt="Website Logo" src="./images/Logo.png"></a>
+        <ul class="navmenu">
             <li class="btn"><a href="#home">Home</a></li>
             <li class="btn"><a href="#about">About</a></li>
             <li class="btn"><a href="#services">Services</a></li>
